src/objects/Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brief intervention</fullName>
                </value>
                <value>
                    <fullName>Key Working</fullName>
                </value>
                <value>
                    <fullName>Case Management</fullName>
                </value>
                <value>
                    <fullName>Psychiatric treatment</fullName>
                </value>
                <value>
                    <fullName>Individual counselling</fullName>
                </value>
                <value>
                    <fullName>Group counselling</fullName>
                </value>
                <value>
                    <fullName>Social and/or occupational reintegration</fullName>
                </value>
                <value>
                    <fullName>Family therapy</fullName>
                </value>
                <value>
                    <fullName>Complimentary Therapy</fullName>
                </value>
                <value>
                    <fullName>Genera Admin</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Interagency meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advice_and_Support_given__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advice and Support given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendance_Date__c</fullName>
        <description>Return a date depending on the record type</description>
        <formula>CASE( RecordType.DeveloperName , &quot;Course_Attendance&quot;,  Date_of_Session__c , &quot;Drop_In_Attendance&quot;,  Drop_in__r.Date__c , &quot;One_to_One_Attendance&quot;,  DATEVALUE(Date_and_time_of_attendance__c), &quot;Open_Access_Attendance&quot;,  DATEVALUE(Date_and_Time_client_entered__c),  DATEVALUE(CreatedDate) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brief_Intervention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brief Intervention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CADS_MMP_C__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>CADS - Methadone Maintenance Programme/Counselling</inlineHelpText>
        <label>CADS - MMP/Counselling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRAlink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>CRA associated with this Attendance at Drop-in</inlineHelpText>
        <label>CRA Link</label>
        <referenceTo>CRA__c</referenceTo>
        <relationshipLabel>Drop-in Attendance</relationshipLabel>
        <relationshipName>Drop_in_Attendance1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calendar_Event_ID__c</fullName>
        <label>Calendar Event ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Event_Name__c</fullName>
        <inlineHelpText>The subject of the event</inlineHelpText>
        <label>Calendar Event Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_plan_step_date__c</fullName>
        <formula>Date_of_Session__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Care plan step date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Care_plan_step_description__c</fullName>
        <formula>&quot;Course: &quot; &amp; Course__c &amp; &quot; Session: &quot; &amp;  Program_Session__r.Name</formula>
        <label>Care plan step description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_age__c</fullName>
        <formula>Young_Person__r.Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_gender__c</fullName>
        <formula>text( Young_Person__r.X4_Gender__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Detox_Programme__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Detox Programme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_GP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community GP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complimentary_Therapies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complimentary Therapies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Computer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Computer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coolmine_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coolmine Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coolmine_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coolmine Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <formula>Program_Session__r.Program_Service__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_client_entered__c</fullName>
        <label>Date and Time client entered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_client_left__c</fullName>
        <label>Date and Time client left</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_and_time_of_attendance__c</fullName>
        <label>Date and time of attendance</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Session__c</fullName>
        <formula>Program_Session__r.Session_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Session</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_since_last_activity__c</fullName>
        <label>Days since last activity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>CASE( RecordType.DeveloperName , &quot;Course_Attendance&quot;,  Course__c  , &quot;Drop_In_Attendance&quot;,  text(Reason_for_Attending__c)  , &quot;One_to_One_Attendance&quot;, text(Reason_for_Attending__c), &quot;Open_Access_Attendance&quot;, &quot;&quot;, null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detox_Residential_Setting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detox/Residential Setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Doctor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drop_in__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Drop-in</label>
        <referenceTo>Drop_in__c</referenceTo>
        <relationshipLabel>Drop-in Attendance</relationshipLabel>
        <relationshipName>Drop_in_Attendance2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration_in_minutes__c</fullName>
        <defaultValue>$Setup.eCASS_settings__c.Default_attendance_duration__c</defaultValue>
        <label>Duration (in minutes)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Education -Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrolment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrolment</label>
        <referenceTo>Enrolment__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Food__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Food</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Harm_Reduction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Harm Reduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Housing_Officer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Housing Officer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Induction_given__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should be given at third session</inlineHelpText>
        <label>Induction given (3rd session)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <label>Interaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_worker_offered__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Fill in the key worker in the client record</inlineHelpText>
        <label>Key worker offered (6th session)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Laundry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Laundry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Literacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Literacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dublin</fullName>
                </value>
                <value>
                    <fullName>Mullingar</fullName>
                </value>
                <value>
                    <fullName>Limerick</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MQI_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MQI Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDTRS_Intervention__c</fullName>
        <formula>IF( Text(Programme__c) = &quot;Drug Team&quot;, 
( 
CASE( Activity_Type__c , 
&quot;Brief Intervention&quot;, &quot;Brief Intervention&quot;, 
&quot;Individual Counselling&quot;,&quot;Individual Counselling&quot;,
&quot;Not HRB Intervention&quot;)
),
(
CASE( Activity_Type__c , 
&quot;Brief Intervention&quot;, &quot;Brief Intervention&quot;, 
&quot;Individual Counselling&quot;,&quot;Individual Counselling&quot;,
&quot;Not HRB Intervention&quot;)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NDTRS Intervention</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>None__c</fullName>
        <defaultValue>false</defaultValue>
        <label>None</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note_anything_left_at_reception__c</fullName>
        <label>Note anything left at reception</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nurse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nurse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nutrition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nutrition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_to_one_brief_intervention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One-to-one brief intervention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_reason__c</fullName>
        <label>Other reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_referral__c</fullName>
        <inlineHelpText>If other, please specify</inlineHelpText>
        <label>Other referral</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone_call_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone call out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_entry_Dublin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-entry Dublin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_entry_Limerick__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-entry Limerick</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_entry_Mullingar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-entry Mullingar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The program session the client attends</inlineHelpText>
        <label>Program Session</label>
        <referenceTo>Program_Session__c</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Programme__c</fullName>
        <label>Programme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Drug Team</fullName>
                </value>
                <value>
                    <fullName>Cocaine</fullName>
                </value>
                <value>
                    <fullName>Drop-in</fullName>
                </value>
                <value>
                    <fullName>Outreach</fullName>
                </value>
                <value>
                    <fullName>CE Programme</fullName>
                </value>
                <value>
                    <fullName>Family Support</fullName>
                </value>
                <value>
                    <fullName>Aftercare</fullName>
                </value>
                <value>
                    <fullName>Stabisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Put_in_my_calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If ticked, then the attendance is logged in the calendar</inlineHelpText>
        <label>Put in my calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Attending__c</fullName>
        <label>Reason for Attending</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Homeless</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Substance use</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Crisis</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relapse_prevention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relapse prevention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Calendar_Event__c</fullName>
        <formula>if (isblank( Calendar_Event_ID__c ), &quot;&quot;, HYPERLINK(&quot;/&quot; &amp;  Calendar_Event_ID__c  ,  Calendar_Event_Name__c  ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Calendar Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requests_from_client__c</fullName>
        <label>Requests from client</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SIMON_Community__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SIMON Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_notes__c</fullName>
        <label>Session notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Showers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Showers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Welfare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social Welfare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>St_Marthas_Longford__c</fullName>
        <defaultValue>false</defaultValue>
        <label>St Marthas Longford</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stabilisation_Detox_Limerick__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stabilisation/Detox Limerick</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stabilisation_Detox_Mullingar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stabilisation/Detox Mullingar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Comment__c</fullName>
        <label>Status Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Booked</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Cancelled with notice and reason</fullName>
                </value>
                <value>
                    <fullName>Cancelled Late</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stepping_Out_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stepping Out Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suspect_client_is_under_18__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will send an email to someone</inlineHelpText>
        <label>Suspect client is under 18</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TFE_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TFE Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VEC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VEC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Who_did_induction__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Who did induction</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Open Access attendances (Who did induction)</relationshipLabel>
        <relationshipName>Open_Access_attendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Young_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person who attended the event</inlineHelpText>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendances</relationshipLabel>
        <relationshipName>Attendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Young_Person_name__c</fullName>
        <formula>Young_Person__r.FirstName &amp; &quot; &quot; &amp;  Young_Person__r.LastName</formula>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <label>Attendance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Young_Person_name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Attendance_Date__c</columns>
        <columns>Attended__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Care_plan_step_description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_121_Attendances</fullName>
        <columns>NAME</columns>
        <columns>Young_Person__c</columns>
        <columns>Reason_for_Attending__c</columns>
        <columns>Date_and_time_of_attendance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Attendance__c.One_to_One_Attendance</value>
        </filters>
        <label>All One to One Attendances</label>
    </listViews>
    <listViews>
        <fullName>All_Course_Attendances</fullName>
        <columns>Attended__c</columns>
        <columns>Date_of_Session__c</columns>
        <columns>Course__c</columns>
        <columns>Young_Person__c</columns>
        <columns>NAME</columns>
        <columns>Program_Session__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Attendance__c.Course_Attendance</value>
        </filters>
        <label>All Course Attendances</label>
    </listViews>
    <listViews>
        <fullName>All_Drop_In_Attendances</fullName>
        <columns>Attended__c</columns>
        <columns>NAME</columns>
        <columns>Program_Session__c</columns>
        <columns>Course__c</columns>
        <columns>Young_Person__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Attendance__c.Drop_In_Attendance</value>
        </filters>
        <label>All Drop In Attendances</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Access_Attendances</fullName>
        <columns>Attended__c</columns>
        <columns>NAME</columns>
        <columns>Program_Session__c</columns>
        <columns>Course__c</columns>
        <columns>Young_Person__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Attendance__c.Open_Access_Attendance</value>
        </filters>
        <label>All Open Access Attendances</label>
    </listViews>
    <nameField>
        <label>Attendance Ref</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendances</pluralLabel>
    <recordTypes>
        <fullName>Course_Attendance</fullName>
        <active>true</active>
        <description>Used for program courses</description>
        <label>Course Attendance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Drop_In_Attendance</fullName>
        <active>true</active>
        <description>Used to record Drop In Attendances</description>
        <label>Drop In Attendance</label>
    </recordTypes>
    <recordTypes>
        <fullName>One_to_One_Attendance</fullName>
        <active>true</active>
        <description>Use for a meeting with a client</description>
        <label>One to One Attendance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open_Access_Attendance</fullName>
        <active>true</active>
        <description>Used to record for Open Access attendance</description>
        <label>Open Access Attendance</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>